%changelog
* Thu Jan 23 2020 Artefactual <sysadmin@artefactual.com> - 0.19.2
- Changes: https://github.com/artefactual-labs/enduro/releases/tag/v0.19.2