@@ -1,3 +1,5 @@
 %changelog
+* Fri May 13 2022 Artefactual <sysadmin@artefactual.com> - 0.36.2
+- Changes: https://github.com/artefactual-labs/enduro/releases/tag/v0.36.2
 * Thu Jan 23 2020 Artefactual <sysadmin@artefactual.com> - 0.19.2
 - Changes: https://github.com/artefactual-labs/enduro/releases/tag/v0.19.2
